ajustes services cartografia postgres
se ajustaron los servicios para tomar en cuenta cartografia en postgress para el masivo 2019

--- a/sare_db/src/main/resources/bd.properties
+++ b/sare_db/src/main/resources/bd.properties
@@ -4,7 +4,7 @@ db.test.url = jdbc:postgresql://10.152.11.58:5436/bd_sare
 db.test.user = censos2013
 db.test.password = censos_prueba
 
-db.test.schema=sare_seg2018_act
+db.test.schema=sare_mas2019_carto
 
 # Base de Datos Pruebas oracle
 
