cambio conexion oracle

--- a/sare_db/src/main/resources/bd.properties
+++ b/sare_db/src/main/resources/bd.properties
@@ -8,12 +8,17 @@ db.test.schema=sare_mas2019_carto
 
 # Base de Datos Pruebas oracle
 
-db.test.driver.ocl = oracle.jdbc.driver.OracleDriver
-db.test.url.ocl = jdbc:oracle:thin:@ce19desabd.inegi.gob.mx:1521:ce19desa
-db.test.user.ocl = sare_seg_2018
-db.test.password.ocl = sare_seg_2018
+#db.test.driver.ocl = oracle.jdbc.driver.OracleDriver
+#db.test.url.ocl = jdbc:oracle:thin:@ce19desabd.inegi.gob.mx:1521:ce19desa
+#db.test.user.ocl = sare_seg_2018
+#db.test.password.ocl = sare_seg_2018
 
-db.test.schema.ocl=CE2019_SEG
+db.test.driver.ocl = oracle.jdbc.driver.OracleDriver
+db.test.url.ocl = jdbc:oracle:thin:@ce19val_bd.inegi.gob.mx:1521/ce19val.inegi.gob.mx
+db.test.user.ocl = ce2019_sare
+db.test.password.ocl = ce2019##psare
+
+db.test.schema.ocl=ce2019_masrencal
 
 # Base de Datos MDM
 
@@ -37,18 +42,23 @@ db.prod.schema=sare_seg2018_act
 
 # Base de Datos Produccion oracle
 
-db.prod.driver.ocl = oracle.jdbc.driver.OracleDriver
-db.prod.url.ocl = jdbc:oracle:thin:@ce19probd.inegi.gob.mx:1521:ce19pro
-db.prod.user.ocl = sare_seg_2018
-db.prod.password.ocl = sare_seg_2018
+#db.prod.driver.ocl = oracle.jdbc.driver.OracleDriver
+#db.prod.url.ocl = jdbc:oracle:thin:@ce19probd.inegi.gob.mx:1521:ce19pro
+#db.prod.user.ocl = sare_seg_2018
+#db.prod.password.ocl = sare_seg_2018
 
-db.prod.schema.ocl=CE2019_SEG
+db.prod.driver.ocl = oracle.jdbc.driver.OracleDriver
+db.prod.url.ocl = jdbc:oracle:thin:@ce19val_bd.inegi.gob.mx:1521/ce19val.inegi.gob.mx
+db.prod.user.ocl = ce2019_sare
+db.prod.password.ocl = ce2019##psare
+
+db.prod.schema.ocl=ce2019_masrencal
 
 
 # Base de Datos MDM
 
 db.prod.driver.mdm = org.postgresql.Driver
-db.prod.url.mdm = jdbc:postgresql://10.152.11.44:5433/bdgeoestadistico
+db.prod.url.mdm = jdbc:oracle:thin:@ce19val_bd.inegi.gob.mx:1521/ce19val.inegi.gob.m
 db.prod.user.mdm = gsolg_viv2015_c
 db.prod.password.mdm = Vivienda2015
 
