--- a/sare_db/src/main/resources/bd.properties
+++ b/sare_db/src/main/resources/bd.properties
@@ -14,9 +14,9 @@ db.test.schema=sare_mas2019_carto
 #db.test.password.ocl = sare_seg_2018
 
 db.test.driver.ocl = oracle.jdbc.driver.OracleDriver
-db.test.url.ocl = jdbc:oracle:thin:@ce19val_bd.inegi.gob.mx:1521/ce19val.inegi.gob.mx
+db.test.url.ocl = jdbc:oracle:thin:@ce19desa_bd.inegi.gob.mx:1521/ce19desa.inegi.gob.mx
 db.test.user.ocl = ce2019_sare
-db.test.password.ocl = ce2019##psare
+db.test.password.ocl = ce2019_sare
 
 db.test.schema.ocl=ce2019_masrencal
 
