ocultar divs sucursal y matrices

--- a/sare_db/src/main/resources/bd.properties
+++ b/sare_db/src/main/resources/bd.properties
@@ -38,7 +38,7 @@ db.prod.driver = org.postgresql.Driver
 db.prod.url = jdbc:postgresql://10.153.3.6:5432/bd_sare
 db.prod.user = usr_sare2017
 db.prod.password = sareusr17
-db.prod.schema=sare_seg2018_act
+db.prod.schema=sare_mas2019_carto
 
 # Base de Datos Produccion oracle
 
