--- a/sare_db/src/main/resources/bd.properties
+++ b/sare_db/src/main/resources/bd.properties
@@ -58,7 +58,7 @@ db.prod.schema.ocl=ce2019_masrencal
 # Base de Datos MDM
 
 db.prod.driver.mdm = org.postgresql.Driver
-db.prod.url.mdm = jdbc:oracle:thin:@ce19val_bd.inegi.gob.mx:1521/ce19val.inegi.gob.m
+db.prod.url.mdm = jdbc:postgresql://10.152.11.44:5433/bdgeoestadistico
 db.prod.user.mdm = gsolg_viv2015_c
 db.prod.password.mdm = Vivienda2015
 
