--- a/sare_db/src/main/resources/bd.properties
+++ b/sare_db/src/main/resources/bd.properties
@@ -6,7 +6,7 @@ db.test.password = censos_prueba
 
 db.test.schema=sare_mas2019_carto
 
-# Base de Datos Pruebas oracle
+# Base de Datos Pruebas oracle ***MASIVO***
 
 #db.test.driver.ocl = oracle.jdbc.driver.OracleDriver
 #db.test.url.ocl = jdbc:oracle:thin:@ce19desabd.inegi.gob.mx:1521:ce19desa
@@ -40,7 +40,7 @@ db.prod.user = usr_sare2017
 db.prod.password = sareusr17
 db.prod.schema=sare_mas2019_carto
 
-# Base de Datos Produccion oracle
+# Base de Datos Produccion oracle ***MASIVO***
 
 #db.prod.driver.ocl = oracle.jdbc.driver.OracleDriver
 #db.prod.url.ocl = jdbc:oracle:thin:@ce19probd.inegi.gob.mx:1521:ce19pro
@@ -63,6 +63,21 @@ db.prod.user.mdm = gsolg_viv2015_c
 db.prod.password.mdm = Vivienda2015
 
 db.prod.schema.mdm=mgm_dic2017
+
+#Base de Datos Producci\u00f3n Oracle ***EGE****
+
+db.prod.driver.ocl.ege = oracle.jdbc.driver.OracleDriver
+db.prod.url.ocl.ege = jdbc:oracle:thin:@ce19probd.inegi.gob.mx:1521:ce19pro
+db.prod.user.ocl.ege = sare_seg_2018
+db.prod.password.ocl.ege = sare_seg_2018
+
+#Base de Datos Pruebas Oracle ***EGE****
+
+db.test.driver.ocl.ege = oracle.jdbc.driver.OracleDriver
+db.test.url.ocl.ege = jdbc:oracle:thin:@ce19desabd.inegi.gob.mx:1521:ce19desa
+db.test.user.ocl.ege = sare_seg_2018
+db.test.password.ocl.ege = sare_seg_2018
+
 
 
 
