--- a/sare_db/src/main/resources/bd.properties
+++ b/sare_db/src/main/resources/bd.properties
@@ -35,10 +35,17 @@ db.test.schema.mdm=mgm_dic2017
 #Base de Datos Produccion
 
 db.prod.driver = org.postgresql.Driver
-db.prod.url = jdbc:postgresql://10.153.3.6:5432/bd_sare
-db.prod.user = usr_sare2017
-db.prod.password = sareusr17
+db.prod.url = jdbc:postgresql://10.152.11.58:5436/bd_sare
+db.prod.user = censos2013
+db.prod.password = censos_prueba
+
 db.prod.schema=sare_mas2019_carto
+
+#db.prod.driver = org.postgresql.Driver
+#db.prod.url = jdbc:postgresql://10.153.3.6:5432/bd_sare
+#db.prod.user = usr_sare2017
+#db.prod.password = sareusr17
+#db.prod.schema=sare_mas2019_carto
 
 # Base de Datos Produccion oracle ***MASIVO***
 
@@ -67,16 +74,16 @@ db.prod.schema.mdm=mgm_dic2017
 #Base de Datos Producci\u00f3n Oracle ***EGE****
 
 db.prod.driver.ocl.ege = oracle.jdbc.driver.OracleDriver
-db.prod.url.ocl.ege = jdbc:oracle:thin:@ce19probd.inegi.gob.mx:1521:ce19pro
-db.prod.user.ocl.ege = sare_seg_2018
-db.prod.password.ocl.ege = sare_seg_2018
+db.prod.url.ocl.ege = jdbc:oracle:thin:@ce19val_bd.inegi.gob.mx:1521/ce19val.inegi.gob.mx
+db.prod.user.ocl.ege = ce2019_sare
+db.prod.password.ocl.ege = ce2019##psare
 
 #Base de Datos Pruebas Oracle ***EGE****
 
 db.test.driver.ocl.ege = oracle.jdbc.driver.OracleDriver
-db.test.url.ocl.ege = jdbc:oracle:thin:@ce19desabd.inegi.gob.mx:1521:ce19desa
-db.test.user.ocl.ege = sare_seg_2018
-db.test.password.ocl.ege = sare_seg_2018
+db.test.url.ocl.ege = jdbc:oracle:thin:@ce19desa_bd.inegi.gob.mx:1521/ce19desa.inegi.gob.mx
+db.test.user.ocl.ege = ce2019_sare
+db.test.password.ocl.ege = ce2019_sare
 
 
 
