--- a/sare_db/src/main/resources/bd.properties
+++ b/sare_db/src/main/resources/bd.properties
@@ -34,18 +34,18 @@ db.test.schema.mdm=mgm_dic2017
 
 #Base de Datos Produccion
 
-db.prod.driver = org.postgresql.Driver
-db.prod.url = jdbc:postgresql://10.152.11.58:5436/bd_sare
-db.prod.user = censos2013
-db.prod.password = censos_prueba
-
-db.prod.schema=sare_mas2019_carto
-
 #db.prod.driver = org.postgresql.Driver
-#db.prod.url = jdbc:postgresql://10.153.3.6:5432/bd_sare
-#db.prod.user = usr_sare2017
-#db.prod.password = sareusr17
+#db.prod.url = jdbc:postgresql://10.152.11.58:5436/bd_sare
+#db.prod.user = censos2013
+#db.prod.password = censos_prueba
+#
 #db.prod.schema=sare_mas2019_carto
+
+db.prod.driver = org.postgresql.Driver
+db.prod.url = jdbc:postgresql://10.153.3.6:5432/bd_sare
+db.prod.user = usr_sare2017
+db.prod.password = sareusr17
+db.prod.schema=sare_mas2019_carto
 
 # Base de Datos Produccion oracle ***MASIVO***
 
