--- a/sare_services/pom.xml
+++ b/sare_services/pom.xml
@@ -84,5 +84,10 @@
             <version>7.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.16</version>
+        </dependency>
     </dependencies>
 </project>
