--- a/sare_seg/pom.xml
+++ b/sare_seg/pom.xml
@@ -89,7 +89,13 @@
             <artifactId>commons-exec</artifactId>
             <version>1.3</version>
         </dependency>
+         <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.16</version>
+        </dependency>
     </dependencies>
+    
 
     <build>
          <finalName>${project.artifactId}</finalName>
